--- a/projeto05/src/main/resources/application.properties
+++ b/projeto05/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # DATASOURCE
-spring.datasource.url=jdbc:h2:file:./cliente
+spring.datasource.url=jdbc:h2:file:./cliente-cartao
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=admin
-spring.datasource.password=123456
+spring.datasource.password=
 
 # H2 Console
 spring.h2.console.enabled=true
@@ -11,3 +11,11 @@ spring.h2.console.path=/h2-console
 # JPA
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=serratecRenan@gmail.com
+spring.mail.password=!Senha123
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
