--- a/EcommercApi/pom.xml
+++ b/EcommercApi/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>org.serratec.backend</groupId>
 	<artifactId>projeto05</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>projeto05</name>
+	<name>EcommercApi</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
